29.04.07 - ingwa
	Cleaned katlaswindrose.{h,cpp}
	Cleaned katlascrosshair.{h,cpp}
	Cleaned placemarkinfodialog.{h,cpp}
	Cleaned maptheme.{h,cpp}

26.04.07 - ingwa
	Cleaned tilescissor.{h,cpp}
	
25.04.07 - ingwa
	Lots of small cleaning
	Cleaned placemarkmodel.{h,cpp}

23.04.07 - ingwa
	Fixed typo in MANIFESTO.txt
	Cleaned placemarkpainter.{h,cpp}
	Cleaned placemarkmanager.{h,cpp}
	
22.04.07 - ingwa
	Cleaned placemark.{h,cpp}
	Cleaned placecontainer.{h,cpp}
	Cleaned vectorcomposer.{h,cpp}
	
22.04.07 - ingwa
	First draft of the DESIGN file with headings, but lots of missing
	contents.

22.04.07 - murad/tackat
	Introducing m_dragThreshold in KAtlasInputHandler to get rid of
	extra repaints.